test/src/e2e_vm_tests/test_programs/should_pass/language/import_star_name_clash/src/d.sw
library;

pub enum MyOtherEnumVariants {
    E: u64,
    F: u64,
}
