test/src/e2e_vm_tests/test_programs/should_fail/language/import_star_name_clash/src/c.sw
library;

pub enum MyEnumVariants {
    D: u64,
    E: u64,
}
